Add person recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">naoscient</string>
+	<string name="add_person">Add Person</string>
+	<string name="app_name">naoscient</string>
 </resources>
