--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
+	<string name="add_data">Add Data</string>
 	<string name="add_person">Add Person</string>
+	<string name="open_navigation_drawer">Open Navigation Drawer</string>
+	<string name="close_navigation_drawer">Close Navigation Drawer</string>
 	<string name="app_name">naoscient</string>
 	<string name="first_name">First Name</string>
+	<string name="food">Food</string>
+	<string name="home">Home</string>
 	<string name="last_name">Last Name</string>
+	<string name="people">People</string>
+	<string name="symptoms">Symptoms</string>
 	<string name="there_was_an_unexpected_error">There was an unexpected error.</string>	
 </resources>
